// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctely on OFF position 1`] = `
<div
  className="tv-switch "
>
  <div
    className="box -off"
    onClick={[Function]}
  >
    <div
      className="circle -off"
    />
  </div>
</div>
`;

exports[`renders correctely on ON position 1`] = `
<div
  className="tv-switch "
>
  <div
    className="box -on"
    onClick={[Function]}
  >
    <div
      className="circle -on"
    />
  </div>
</div>
`;
